syntax = "proto3";

package sso;

option go_package = "github.com/yourusername/sso-grpc/api;api";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Profile(ProfileRequest) returns (ProfileResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  int32 id = 1;
  string message = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message ProfileRequest {
  string token = 1;
}

message ProfileResponse {
  int32 id = 1;
  string username = 2;
  string email = 3;
}